--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,6 @@ body {
   align-items: center;
   justify-content: center;
   font-family: 'Caveat', cursive;
-  overflow-x: hidden;
 }
 
 #root {
